changed link address

--- a/mariopage.html
+++ b/mariopage.html
@@ -81,7 +81,7 @@
                 <p  class="copyright" >&copy; Copyright: MARIO club </p>
             </footer>
 
-            <p class="myname">  <a href="https://github.com/sheshu22/sheshu22"> <strong>SHESHASENA REDDY</strong> </p> </a>
+            <p class="myname">  <a href="https://github.com/sheshu22"> <strong>SHESHASENA REDDY</strong> </p> </a>
 
         </section>
 
