--- a/mariopage.html
+++ b/mariopage.html
@@ -15,7 +15,7 @@
         </header>
 
         <section class="banner" >
-            <img src="/html files/banner.png" alt="Background Banner">
+            <img src="projects/mario/banner.png" alt="Background Banner">
 
             <div class="welcome">
 
