git commit -m 'updated image links'

--- a/mariopage.html
+++ b/mariopage.html
@@ -15,7 +15,7 @@
         </header>
 
         <section class="banner" >
-            <img src="projects/mario/banner.png" alt="Background Banner">
+            <img src="/mario/banner.png" alt="Background Banner">
 
             <div class="welcome">
 
@@ -56,9 +56,9 @@
             </article>
 
             <ul class="images">
-                <li><img src="/html files/thumb-1.png" alt="Image1"></li>
+                <li><img src="/mario/thumb-1.png" alt="Image1"></li>
                 <br>
-                <li><img src="/html files/thumb-2.png" alt="Image2"></li>
+                <li><img src="/mario/thumb-2.png" alt="Image2"></li>
             </ul>
         </main>
 
